feat:配置redux用来管理用户信息

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/mockjs": "^1.0.7",
     "ahooks": "^3.7.8",
     "antd": "^5.6.2",
@@ -19,6 +20,7 @@
     "mockjs": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
     "sass": "^1.63.6"
   },
