--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "antd": "^5.6.2",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "lodash": "^4.17.21",
+    "lodash.clonedeep": "^4.5.0",
     "mockjs": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,6 +27,7 @@
     "sass": "^1.63.6"
   },
   "devDependencies": {
+    "@types/lodash.clonedeep": "^4.5.7",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
